form added sucessfully

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                             </div>
                         </div>
                     </form> -->
-                    <iframe
+                    <iframe class="contact-form"
                         src="https://docs.google.com/forms/d/e/1FAIpQLScCyKmQKj9tWObrIeBSnNPujNMKGrF3P2NPc_9tDOEycslHlQ/viewform?embedded=true"
                         width="1024" height="1200" frameborder="0" marginheight="0" flex="block"
                         marginwidth="0">Loading…</iframe>
