--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="about-content padd-15">
                         <div class="row">
                             <div class="about-text padd-15">
-                                <h3>I'm Saif Hegazy and <span>Data Analyst</span></h3>
+                                <h3>I'm Saif Hegazy <span>A Data Analyst</span></h3>
                                 <p>Motivated undergraduate Data Science student with a strong foundation in data
                                     analysis and a passion for extracting insights from complex datasets.
                                     <br> Eager to apply skills gained through academic coursework, and a comprehensive
@@ -93,7 +93,17 @@
                                         </p>
                                     </div>
                                     <div class="info-item padd-15">
-                                        <p>Email : <span>saifhegazybusiness@gmail.com</span></p>
+                                        <p>LinkedIn : <span><a href="https://www.linkedin.com/in/saif-hegazy1/"
+                                                    target="_blank">linkedin.com/in/saif-hegazy1/</a></span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>
+                                            Email :
+                                            <span>
+                                                <a href="mailto:saifhegazybusiness@gmail.com"
+                                                    class="Mail-link">saifhegazybusiness@gmail.com</a>
+                                            </span>
+                                        </p>
                                     </div>
                                     <div class="info-item padd-15">
                                         <p>Degree : <span>UnderGraduate Data Science Major</span></p>
@@ -104,9 +114,7 @@
                                     <div class="info-item padd-15">
                                         <p>City : <span>Alexandria</span></p>
                                     </div>
-                                    <div class="info-item padd-15">
-                                        <p>Freelance : <span>Available</span></p>
-                                    </div>
+
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
@@ -423,6 +431,7 @@
                             href="https://drive.google.com/drive/folders/1y5Kms6O3ffviCaSLqO48ZJ88HLUc_aXX?usp=sharing">Full
                             Project Link</a></h4>
                 </div>
+
             </section>
             <!--Portfolio Section End-->
             <!--Contact Section Start-->
@@ -454,7 +463,24 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
-                            <p>saifhegazybusiness@gmail.com</p>
+                            <p>
+                                <span>
+                                    <a href="mailto:saifhegazybusiness@gmail.com"
+                                        class="Mail-link">saifhegazybusiness@gmail.com</a>
+                                </span>
+                            </p>
+                        </div>
+                        <!--Contact info item End-->
+                        <!--Contact info item Start-->
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-link"></i></div>
+                            <h4>Linked In</h4>
+                            <p>
+                                <span>
+                                    <a href="https://www.linkedin.com/in/saif-hegazy1/" target="_blank"
+                                        class="Mail-link">linkedin.com/in/saif-hegazy1/</a>
+                                </span>
+                            </p>
                         </div>
                         <!--Contact info item End-->
                         <!--Contact info item Start-->
@@ -590,9 +616,16 @@
         </div>
     </div>
     <!--Style Switcher End-->
+
+    <div id="portfolio-modal" class="portfolio-modal">
+        <span class="close-modal">&times;</span>
+        <img class="modal-content" id="modal-img" src="" alt="Portfolio Image">
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js"></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
+
+</body>
 </body>
 
 </html>
