link style modified

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                                     </div>
                                     <div class="info-item padd-15">
                                         <p>LinkedIn : <span><a href="https://www.linkedin.com/in/saif-hegazy1/"
-                                                    target="_blank">linkedin.com/in/saif-hegazy1/</a></span></p>
+                                                    target="_blank"
+                                                    class="Mail-link">linkedin.com/in/saif-hegazy1/</a></span></p>
                                     </div>
                                     <div class="info-item padd-15">
                                         <p>
@@ -427,7 +428,7 @@
                         <!-- Portfolio Item End-->
                     </div>
                     <br>
-                    <h4><a target="_blank"
+                    <h4><a target="_blank" class="Mail-link"
                             href="https://drive.google.com/drive/folders/1y5Kms6O3ffviCaSLqO48ZJ88HLUc_aXX?usp=sharing">Full
                             Project Link</a></h4>
                 </div>
